compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__wrong_type_arg.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1554
expression: "\nfn wibble(x: List<Int>) { x }\nfn main(y: List<something>) {\n  wibble(y)\n}"
---
----- SOURCE CODE

fn wibble(x: List<Int>) { x }
fn main(y: List<something>) {
  wibble(y)
}

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:10
  │
4 │   wibble(y)
  │          ^

Expected type:

    List(Int)

Found type:

    List(something)
